debug toList and modifs pom.xml