@@ -6,6 +6,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.PrintStream;
 import java.util.*;
 import java.util.function.Consumer;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -18,14 +19,14 @@ public class LambdaStreamExcTest {
     @Test
     public void testCreateStrStream(){
         Stream<String> stream = lse.createStrStream("a", "b", "c");
-        List<String> result = stream.toList();
+        List<String> result = stream.collect(Collectors.toList());
         assertEquals(Arrays.asList("a", "b", "c"), result);
     }
 
     @Test
     public void testToUpperCase() {
         Stream<String> stream = lse.toUpperCase("hello", "world");
-        List<String> result = stream.toList();
+        List<String> result = stream.collect(Collectors.toList());
         assertEquals(Arrays.asList("HELLO", "WORLD"), result);
     }
 
@@ -33,7 +34,7 @@ public class LambdaStreamExcTest {
     public void testFilter() {
         Stream<String> input = lse.createStrStream("string", "int", "long", "double");
         Stream<String> filtered = lse.filter(input, "n");
-        List<String> result = filtered.toList();
+        List<String> result = filtered.collect(Collectors.toList());
         assertEquals(Collections.singletonList("double"), result);
     }
 
@@ -41,7 +42,7 @@ public class LambdaStreamExcTest {
     public void testCreateIntStreamArray() {
         int[] arr = {1, 2, 3};
         IntStream intStream = lse.createIntstream(arr);
-        List<Integer> result = intStream.boxed().toList();
+        List<Integer> result = intStream.boxed().collect(Collectors.toList());
         assertEquals(Arrays.asList(1, 2, 3), result);
     }
 
@@ -56,7 +57,7 @@ public class LambdaStreamExcTest {
     @Test
     public void  testCreateIntStreamRange(){
         IntStream intStream = lse.createIntStream(1, 5);
-        List<Integer> result = intStream.boxed().toList();
+        List<Integer> result = intStream.boxed().collect(Collectors.toList());
         assertEquals(Arrays.asList(1, 2, 3, 4, 5), result);
     }
 
@@ -71,7 +72,7 @@ public class LambdaStreamExcTest {
     @Test
     public  void testGetOdd(){
         IntStream intStream = lse.createIntStream(1, 5);
-        List<Integer> result = lse.getOdd(intStream).boxed().toList();
+        List<Integer> result = lse.getOdd(intStream).boxed().collect(Collectors.toList());
         assertEquals(Arrays.asList(1, 3, 5), result);
     }
 
@@ -121,7 +122,7 @@ public class LambdaStreamExcTest {
         List<Integer> list2 = Arrays.asList(2, 3);
 
         Stream<List<Integer>> nested = Stream.of(list1, list2);
-        List<Integer> result = lse.flatNestedInt(nested).toList();
+        List<Integer> result = lse.flatNestedInt(nested).collect(Collectors.toList());
 
         // squares: 0,1,4,9
         assertEquals(Arrays.asList(0, 1, 4, 9), result);
